--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -5,8 +5,14 @@ layout: default
 <div class="row">
   <div class="col-4">
     <nav class="side-nav">
+      <h4>Getting Started</h4>
       <ul>
-        <li><a href="/docs/getting-started">Getting Started</a></li>
+        <li><a href="/docs/launchpad">Launchpad</a></li>
+        <li><a href="/docs/getting-started">Plain Rails</a></li>
+      </ul>
+
+      <h4>Features</h4>
+      <ul>        
         <li><a href="/docs/snippets">Snippets</a></li>
         <li><a href="/docs/pages">Pages</a></li>
         <li><a href="/docs/menu-management">Menus</a></li>
