--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@ gtag('config', '{{site.ganalytics}}');
         </div>
       </div>
       <div class="col-4 text-right">
-        <a  class=" d-block" href="https://github.com/kindlemanhq/rocket" target="_blank">Join with us on <i class="bi bi-github"></i></a>
+        <a  class=" d-block" href="https://github.com/kindlemanhq/HoustonCms" target="_blank">Join with us on <i class="bi bi-github"></i></a>
       </div>
     </div>
   </div>
