--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -14,6 +14,7 @@ layout: default
       <h4>Features</h4>
       <ul>        
         <li><a href="/docs/snippets">Snippets</a></li>
+        <li><a href="/docs/media-library">Media</a></li>
         <li><a href="/docs/pages">Pages</a></li>
         <li><a href="/docs/menu-management">Menus</a></li>
         
@@ -22,7 +23,9 @@ layout: default
     </nav>
   </div>
   <div class="col-8 pt-5">
-    {{content}}
+    <div class="content">
+      {{content}}
+    </div>    
   </div>
 </div>
 
