--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -11,7 +11,9 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   font-weight: normal;
 }
 
-
+body{
+  
+}
 ol, ul {
   list-style: none;
 }
@@ -23,6 +25,7 @@ img {
 
 p{
   margin-bottom: 1em;
+  line-height: 1.5;
 }
 
 .container{
