start to build home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,12 +43,15 @@ gtag('config', '{{site.ganalytics}}');
           <div class="container">
             <div class="header-content">
               <div class="brand">
-                <a href="{{ site.baseurl }}/"><i class="bi bi-rocket"></i></a>
+                <a href="{{ site.baseurl }}/">
+                  <i class="bi bi-rocket"></i>
+                  <span>Houston</span>
+                </a>
                 
               </div>
               <nav class="main-nav">
                 <ul>
-                  <li><a href="{{ site.baseurl }}/">Home</a></li>
+                  <!-- <li><a href="{{ site.baseurl }}/">Home</a></li> -->
                   <li><a href="{{ site.baseurl }}/docs">Docs</a></li>
                   <!-- <li><a href="{{ site.baseurl }}/about">About</a></li> -->
                 </ul>
