--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -149,3 +149,19 @@ p{
 .h4 { font-size: 1.5rem; }
 .h5 { font-size: 1.25rem; }
 .h6 { font-size: 1rem; }
+
+
+.shadow{
+  box-shadow: 0 .75rem 1.5rem rgba(0,0,0,.15)!important;
+}
+
+.card{
+  border: 1px solid  #0a101d;
+  border-radius: 4px;;
+}
+.card-body{
+  padding: 20px;
+}
+.card-header{
+  padding: 20px;
+}
