--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -50,6 +50,9 @@ h2, h3{
   color: #eeeeee;
   text-decoration: none;
   letter-spacing: -0.5px;
+  span{
+    font-size: 0.8em;
+  }
 }
 
 .brand a:hover {
@@ -237,4 +240,18 @@ footer a:hover {
     display: block;
     margin: 1em auto;
   }
+}
+
+img.bordered{
+  border: 4px solid #0a101d;
+}
+.w-100{
+  max-width: 100%;
+  width: 100%;
+}
+
+
+hr{
+  height: 1px;
+  background-color: #000;
 }
