--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -7,16 +7,16 @@ layout: default
     <nav class="side-nav">
       <h4>Getting Started</h4>
       <ul>
-        <li><a href="/docs/launchpad">Launchpad</a></li>
-        <li><a href="/docs/getting-started">Plain Rails</a></li>
+        <li><a href="{{site.baseurl}}/docs/launchpad">Launchpad</a></li>
+        <li><a href="{{site.baseurl}}/docs/getting-started">Plain Rails</a></li>
       </ul>
 
       <h4>Features</h4>
       <ul>        
-        <li><a href="/docs/snippets">Snippets</a></li>
-        <li><a href="/docs/media-library">Media</a></li>
-        <li><a href="/docs/pages">Pages</a></li>
-        <li><a href="/docs/menu-management">Menus</a></li>
+        <li><a href="{{site.baseurl}}/docs/snippets">Snippets</a></li>
+        <li><a href="{{site.baseurl}}/docs/media-library">Media</a></li>
+        <li><a href="{{site.baseurl}}/docs/pages">Pages</a></li>
+        <li><a href="{{site.baseurl}}/docs/menu-management">Menus</a></li>
         
         <li><a href="/docs/adding-models">Adding Models</a></li>
       </ul>
