--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -18,7 +18,7 @@ layout: default
         <li><a href="{{site.baseurl}}/docs/pages">Pages</a></li>
         <li><a href="{{site.baseurl}}/docs/menu-management">Menus</a></li>
         
-        <li><a href="/docs/adding-models">Adding Models</a></li>
+        <li><a href="{{site.baseurl}}/docs/adding-models">Adding Models</a></li>
       </ul>
     </nav>
   </div>
