--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@ gtag('config', '{{site.ganalytics}}');
               <nav class="main-nav">
                 <ul>
                   <!-- <li><a href="{{ site.baseurl }}/">Home</a></li> -->
-                  <li><a href="{{ site.baseurl }}/docs">Docs</a></li>
+                  <li><a href="{{ site.baseurl }}/docs/launchpad">Docs</a></li>
                   <!-- <li><a href="{{ site.baseurl }}/about">About</a></li> -->
                 </ul>
               </nav>
